<resources>
    <string name="app_name">DynamicCurve</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="x1">X1</string>
    <string name="y1">Y1</string>
    <string name="x2">X2</string>
    <string name="x3">X3</string>
    <string name="x0">X0</string>
    <string name="y2">Y2</string>
    <string name="y3">Y3</string>
    <string name="y0">Y0</string>

    <string name="reverse">Reverse</string>
    <string name="mirror">Mirror</string>
    <string name="upsideDown">UpsideDown</string>
    <string name="shadow">Shadow</string>
    <string name="decreaseHeightBy">Decrease Height By</string>
    <string name="curveColor">Curve Color</string>

</resources>