<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/checkboxReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reverse"
        android:textColor="@color/color_white"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <CheckBox
        android:id="@+id/checkboxMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mirror"
        android:textColor="@color/color_white"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintStart_toStartOf="@id/checkboxReverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxReverse"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <CheckBox
        android:id="@+id/checkboxUpsideDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upsideDown"
        android:textColor="@color/color_white"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintStart_toStartOf="@id/checkboxReverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxMirror"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/textViewCurveColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curveColor"
        android:textColor="@color/color_white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintTop_toTopOf="@id/checkboxReverse"
        app:layout_constraintStart_toEndOf="@id/checkboxReverse"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCurveColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textViewCurveColor"
        app:layout_constraintEnd_toEndOf="@id/textViewCurveColor"
        app:layout_constraintTop_toBottomOf="@id/textViewCurveColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/textViewDecreaseHeightBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decreaseHeightBy"
        android:textSize="16sp"
        android:textColor="@color/color_white"
        app:layout_constraintStart_toStartOf="@id/checkboxReverse"
        app:layout_constraintEnd_toStartOf="@id/recyclerViewCurveColor"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintTop_toBottomOf="@id/checkboxUpsideDown"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <SeekBar
        android:id="@+id/seekBarDecreaseHeightBy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textViewDecreaseHeightBy"
        app:layout_constraintEnd_toStartOf="@id/recyclerViewCurveColor"
        app:layout_constraintTop_toBottomOf="@id/textViewDecreaseHeightBy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04"
        />

</androidx.constraintlayout.widget.ConstraintLayout>